# salary-prediction-dashboard

./: .env.example  .gitignore  DASHBOARD_README.md  README.md  SETUP_GUIDE.md  commands.txt  db_schema.sql  main.py  prompt.txt  pyproject.toml  start_app.sh
app/api/: app.py  db.py  llm_api.py  models.py  ollama_llm.py  pred_llm_service.py  prediction_api.py
backend/: db_schema.sql  main.py  utils.py
backend/app/api/: db.py  models.py  ollama_llm.py
frontend/: start_app.sh  streamlit_app.py
frontend/.streamlit/: config.toml
frontend/lib/: utils.py
frontend/pages/: 02_Model_Performance.py
pages/: 01_Salaries_Analysis.py
