[project]
name = "assig-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.56.0",
    "supabase>=2.28.3",
    "plotly>=5.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.23.0",
    "scikit-learn>=1.8.0",
    "google-genai>=1.71.0",
    "ollama>=0.6.1",
]
